--- a/ControleContatos/Views/Contato/Index.cshtml
+++ b/ControleContatos/Views/Contato/Index.cshtml
@@ -11,6 +11,22 @@
         <a class="btn btn-outline-primary" role="button" asp-controller="Contato" asp-action="Criar">Adcionar novo contato</a>
     </div>
 
+       <br />
+
+    @if (TempData["MensagemSucesso"] != null)
+    {
+        <div class="alert alert-success" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" ariel-label="Close">X</button>
+        @TempData["MensagemSucesso"]
+    </div>
+    }
+    @if (TempData["MensagemError"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" ariel-label="Close">X</button>
+        @TempData["MensagemError"]
+    </div>
+    }
     <table class="table">
         <thead>
             <tr>
