--- a/ControleContatos/Views/Usuario/Index.cshtml
+++ b/ControleContatos/Views/Usuario/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model List<ContatoModel>
+﻿@model List<UsuarioModel>
 @{
-    ViewData["Title"] = "Listagem de contatos";
+    ViewData["Title"] = "Listagem de Usuarios";
 }
 
 <div class="text-center">
       
-    <h1 class="display-4">Listagem de Contatos</h1>
+    <h1 class="display-4">Listagem de Usuários</h1>
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-outline-primary" role="button" asp-controller="Contato" asp-action="Criar">Adcionar novo contato</a>
+        <a class="btn btn-outline-primary" role="button" asp-controller="Usuario" asp-action="Criar">Adcionar novo usuario</a>
     </div>
 
        <br />
@@ -30,29 +30,31 @@
     <table class="table" id="myTable">
         <thead>
             <tr>
-                <th scope="col">ID</th>
+                <th scope="col">#</th>
                 <th scope="col">Nome</th>
-                <th scope="col">Contato</th>
                 <th scope="col">Email</th>
+                <th scope="col">Login</th>
+                <th scope="col">DataDeCadastro</th>
                 <th>Ações</th>
             </tr>
         </thead>
         <tbody>
             @if(Model != null && Model.Any())
             {
-                foreach(ContatoModel dados in Model)
+                foreach(UsuarioModel dados in Model)
                 {
                     <tr>
                         <th scope="row">@dados.Id</th>
                         <td>@dados.Name</td>
                         <td>@dados.Email</td>
-                        <td>@dados.Celular</td>
+                        <td>@dados.Login</td>
+                        <td>@dados.DataCadastro</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a class="btn btn-primary" role="button" asp-controller="Contato" asp-route-id="@dados.Id" asp-action="EditarConfirmacao">Editar</a>
+                                <a class="btn btn-primary" role="button" asp-controller="Usuario" asp-route-id="@dados.Id" asp-action="EditarConfirmacao">Editar</a>
                             </div>
                             <div class="btn-group" role="group">
-                                <a role="button" class="btn btn-danger" asp-controller="Contato" asp-route-id="@dados.Id" asp-action="DeletarConfirmacao">Deletar</a>
+                                <a role="button" class="btn btn-danger" asp-controller="Usuario" asp-route-id="@dados.Id" asp-action="DeletarConfirmacao">Deletar</a>
                             </div>
                         </td>
                     </tr>
