Criando a parte que faz a verificação da Sessao do Usuario, e as confing de acesso e autenticação dessa Sessao

--- a/ControleContatos/Views/Login/Index.cshtml
+++ b/ControleContatos/Views/Login/Index.cshtml
@@ -1,16 +1,29 @@
-﻿@{
+﻿@model LoginModel
+@{
     Layout = "_LayoutDeslogado";
     ViewData["Title"] = "Login";
 }
-<form>
+<form asp-controller="Login" asp-action="Entrar" method="post">
     <div class="form-group">
         <label for="login">Login</label>
-        <input type="text" class="form-control" placeholder="Digite seu Login">
+        <input type="text" asp-for="Login" class="form-control" placeholder="Digite seu Login">
+        @Html.ValidationMessageFor(x => x.Login)
     </div>
     <div class="form-group">
         <label for="senha">Senha</label>
-        <input type="password" class="form-control" placeholder="Senha">
+        <input type="password" asp-for="Senha" class="form-control" placeholder="Senha">
+        @Html.ValidationMessageFor(x => x.Senha)
+
     </div>
+    <br />
+
+    @if (TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" ariel-label="Close">X</button>
+            @TempData["MensagemErro"]
+        </div>
+    }
     <br />
     <button type="submit" class="btn btn-primary btn-block">Entrar</button>
 </form>
